<resources>
    <string name="app_name">Disc Snap!</string>

    <string name="inventory_name">Virtual Bag</string>
    <string name="practice_range_name">Practice Range</string>
    <string name="disc_finder_name">Disc Finder</string>
    <string name="disc_tracer_name">Disc Tracer</string>
    <string name="form_analyzer_name">Form Analyzer</string>
    <string name="disc_info_name">Disc Information</string>

    <string name="add_disc_button">+</string>

    <string name="upload_photo_readable_text">Disc Photo</string>
    <string name="upload_photo_button">Upload</string>
    <string name="pick_disc_color_button">Change Color</string>
    <string name="disc_color_prompt">Color</string>
    <string name="disc_name_prompt">Name</string>
    <string name="disc_name_hint">Name</string>
    <string name="disc_flight_numbers_prompt">Flight Numbers</string>
    <string name="disc_flight_speed_hint">Speed</string>
    <string name="disc_flight_glide_hint">Glide</string>
    <string name="disc_flight_turn_hint">Turn</string>
    <string name="disc_flight_fade_hint">Fade</string>
    <string name="disc_type_prompt">Type</string>
    <string name="disc_weight_prompt">Weight (g)</string>
    <string name="disc_weight_hint">Weight</string>
    <string name="disc_manufacturer_prompt">Manufacturer</string>
    <string name="disc_manufacturer_hint">Manufacturer</string>
    <string name="disc_plastic_prompt">Plastic</string>
    <string name="disc_plastic_hint">Plastic</string>
    <string name="disc_additional_notes_prompt">Additional Notes</string>
    <string name="disc_additional_notes_hint">Additional Notes</string>
    <string name="save_disc_button">Save Disc</string>

    <string-array name="disc_types">
        <item>Distance Driver</item>
        <item>Fairway Driver</item>
        <item>Midrange</item>
        <item>Putter</item>
    </string-array>

    <string name="distance_label">Distance of Throw</string>
    <string name="distance_display_default">-- ft</string>
    <string name="distance_display_start">0 ft</string>
    <string name="set_start_location_button">Set Start Location</string>
    <string name="unset_start_location_button">Unset Start Location</string>
    <string name="save_distance_button">Save Throw</string>

    <string name="save_throw_title">Save Throw</string>
    <string name="throw_notes_hint">Notes</string>
    <string name="save_throw_button">Save</string>
    <string name="save_throw_dismiss_button">x</string>

    <string-array name="default_disc_select">
        <item>SELECT DISC</item>
        <item>NEW DISC</item>
    </string-array>

    <string-array name="throw_types">
        <item>Backhand</item>
        <item>Forehand</item>
        <item>Overhand</item>
    </string-array>

    <string-array name="throw_flights">
        <item>Air shot</item>
        <item>Roller</item>
    </string-array>
</resources>